Add more configuration ENV variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,16 @@ services:
     environment:
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT_NUMBER=9200
-      - MARIADB_HOST=mariadb
-      - MARIADB_PORT_NUMBER=3306
-      - MAGENTO_USERNAME=admin
-      - MAGENTO_PASSWORD=password1
+      - MAGENTO_DATABASE_NAME=bitnami_magento
+      - MAGENTO_DATABASE_PASSWORD=your_password
+      - MAGENTO_DATABASE_USER=bn_magento
       - MAGENTO_EMAIL=admin@example.com
       - MAGENTO_HOST=magento
-      - MAGENTO_DATABASE_USER=bn_magento
-      - MAGENTO_DATABASE_PASSWORD=your_password
-      - MAGENTO_DATABASE_NAME=bitnami_magento
+      - MAGENTO_MODE=developer
+      - MAGENTO_PASSWORD=password1
+      - MAGENTO_USERNAME=admin
+      - MARIADB_HOST=mariadb
+      - MARIADB_PORT_NUMBER=3306
     image: bitnami/magento:latest
     ports:
       - '80:80'
