--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,10 @@
 # !/var/package/*.xml
 
 /src/magento/htdocs/pub/*
+!/src/magento/htdocs/pub/media/.htaccess
+!/src/magento/htdocs/pub/static/.htaccess
 /src/magento/htdocs/var/*
-
-!/src/magento/.initialized
-!/src/magento/htdocs/**/.htaccess
+!/src/magento/htdocs/var/.htaccess
 
 /tmp/*
 
