--- a/config/proxy/traefik.toml
+++ b/config/proxy/traefik.toml
@@ -1,13 +1,8 @@
-debug = false
-
-logLevel = "ERROR"
-defaultEntryPoints = ["https", "http"]
+defaultEntryPoints = ["http", "https"]
 
 [entryPoints]
   [entryPoints.http]
   address = ":80"
-    [entryPoints.http.redirect]
-    entryPoint = "https"
   [entryPoints.https]
   address = ":443"
     [entryPoints.https.tls]
@@ -22,3 +17,4 @@ endpoint = "unix:///var/run/docker.sock"
 domain = "aromashield.localhost"
 watch = true
 exposedByDefault = false
+usebindportip = true
