Finally got everything running
Had to:

- Downgrade the version of ElasticSearch from 7.x to 6.x to get search working.

- Remove (rename) the empty `view.xml` file—it’s not being used, and its existence is causing errors.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 # /var/package/*
 # !/var/package/*.xml
 
+.restored
+
 /src/magento/htdocs/pub/media/*
 !/src/magento/htdocs/pub/media/.htaccess
 /src/magento/htdocs/pub/static/*
