Remove unnecessary top-level directories

--- a/.gitignore
+++ b/.gitignore
@@ -43,12 +43,12 @@
 
 .restored
 
-/src/magento/htdocs/pub/media/*
-!/src/magento/htdocs/pub/media/.htaccess
-/src/magento/htdocs/pub/static/*
-!/src/magento/htdocs/pub/static/.htaccess
-/src/magento/htdocs/var/*
-!/src/magento/htdocs/var/.htaccess
+/src/pub/media/*
+!/src/pub/media/.htaccess
+/src/pub/static/*
+!/src/pub/static/.htaccess
+/src/var/*
+!/src/var/.htaccess
 
 /tmp/*
 
